--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
                 android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax"
-                tools:src="@drawable/detaildummy" />
+                tools:src="@drawable/detail_dummy" />
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
@@ -68,6 +68,7 @@
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tvTitle"
+                    tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck"
                     tools:text="@string/movie_information" />
 
                 <ImageView
@@ -78,6 +79,7 @@
                     android:contentDescription="@string/rating"
                     app:layout_constraintStart_toStartOf="@+id/tvInformation"
                     app:layout_constraintTop_toBottomOf="@+id/tvInformation"
+                    tools:ignore="ImageContrastCheck"
                     tools:src="@drawable/ic_rating_0" />
 
                 <TextView
@@ -89,6 +91,7 @@
                     app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toEndOf="@+id/ivmMainRating"
                     app:layout_constraintTop_toBottomOf="@+id/tvInformation"
+                    tools:ignore="TextContrastCheck"
                     tools:text="@string/dummy_movie_rating" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
