--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
                 android:id="@+id/movieBanner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:contentDescription="@string/movie_banner"
+                android:contentDescription="@string/movieBanner"
                 android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax"
@@ -53,7 +53,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    tools:text="@string/movie_title" />
+                    tools:text="@string/movieTitle" />
 
                 <TextView
                     android:id="@+id/tvInformation"
@@ -69,7 +69,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                     tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck"
-                    tools:text="@string/movie_information" />
+                    tools:text="@string/movieInformation" />
 
                 <ImageView
                     android:id="@+id/ivmMainRating"
@@ -92,7 +92,7 @@
                     app:layout_constraintStart_toEndOf="@+id/ivmMainRating"
                     app:layout_constraintTop_toBottomOf="@+id/tvInformation"
                     tools:ignore="TextContrastCheck"
-                    tools:text="@string/dummy_movie_rating" />
+                    tools:text="@string/dummyMovieRating" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
