--- a/core/src/main/res/layout/item_movie_cast_placeholder.xml
+++ b/core/src/main/res/layout/item_movie_cast_placeholder.xml
@@ -1,29 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingVertical="4dp">
 
     <ImageView
-        android:id="@+id/ivCastProfile"
+        android:id="@+id/ivCastProfilePlaceholder"
         android:layout_width="48dp"
         android:layout_height="48dp"
+        android:background="@color/background_placeholder"
         android:contentDescription="@string/cast"
-        android:src="@drawable/ic_profile_black_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="ImageContrastCheck" />
 
     <TextView
-        android:id="@+id/tv_cast_name"
-        android:layout_width="wrap_content"
+        android:id="@+id/tvCastNamePlaceholder"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:text="@string/dummyCast"
+        android:background="@color/view_placeholder"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/space2"
-        app:layout_constraintStart_toEndOf="@+id/ivCastProfile" />
+        app:layout_constraintStart_toEndOf="@+id/ivCastProfilePlaceholder" />
 
     <Space
         android:id="@+id/space2"
@@ -31,16 +33,17 @@
         android:layout_height="1dp"
         android:layout_marginStart="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/ivCastProfile"
+        app:layout_constraintStart_toEndOf="@+id/ivCastProfilePlaceholder"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tv_cast_role"
-        android:layout_width="wrap_content"
+        android:id="@+id/tvCastRolePlaceholder"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="4dp"
-        android:text="@string/dummyRole"
-        app:layout_constraintStart_toEndOf="@+id/ivCastProfile"
+        android:background="@color/view_placeholder"
+        app:layout_constraintStart_toEndOf="@+id/ivCastProfilePlaceholder"
         app:layout_constraintTop_toBottomOf="@+id/space2" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
