--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -95,9 +95,9 @@
                     android:id="@+id/tvMainRating"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
                     android:layout_marginTop="16dp"
-                    app:layout_constraintEnd_toEndOf="@+id/tvInformation"
-                    app:layout_constraintHorizontal_bias="1.0"
+                    app:layout_constraintBottom_toBottomOf="@+id/ivmMainRating"
                     app:layout_constraintStart_toEndOf="@+id/ivmMainRating"
                     app:layout_constraintTop_toBottomOf="@+id/tvInformation"
                     tools:ignore="TextContrastCheck"
